--- a/activities.html
+++ b/activities.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>My pro-dev page</title>
+    <title>Pro-Dev Activities</title>
 </head>
 <body>
-
+    <h2>April 10th, 2018</h2>
+        <img src="goldencirclev1.svg" alt="Diagram of why, how, what">
 </body>
 </html>
