--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>My pro-dev page</title>
+    <title>My Pro-Dev page</title>
+    <p>Welcome to my professional development portfolio. This is a living document to record my progress throughout bootcamp. I am very excited to be part of Deep Dive Full Stack Cohort 20!</p>
+    <p>You can check out my weekly professional development <a href="activities.html">activities</a>. I will also post a weekly <a href="reflections.html">reflection</a> and keep a running list of my <a href="homework.html">homework</a> projects assigned throughout bootcamp.</p>
 </head>
 <body>
 
