corrected the title tag for reflections and the img src in activities

--- a/reflections.html
+++ b/reflections.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Weekly Reflections/title>
+        <title>Weekly Reflections</title>
     </head>
     <body>
         <h1>Weekly Reflections</h1>
