repositioned img src in activities

--- a/activities.html
+++ b/activities.html
@@ -20,8 +20,8 @@
                 <li>Empathy</li>
                 <li>Linking concepts</li>
             </ul>
-             <p>Name + What + Why + How + Question (invitation) = Elevator Pitch    <img src="goldencirclev1.svg" alt="Diagram of why, how, what">
-             </p>
+        <img src="goldencirclev1.svg" alt="Diagram of why, how, what">
+             <p>Name + What + Why + How + Question (invitation) = Elevator Pitch</p>
             <p>Hi, my name is Yvette. I connect individuals to resources and services to that improve our community. I am doing this in partnership with non-profits and the City of Albuquerque using front-end and back-end languages. Do you do any work with the community?</p>
 </body>
 </html>
