added nav bar, moved hyperlinks to nav bar from the first paragraph

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
         <meta charset="utf-8">
         <title>My Pro-Dev page</title>
     </head>
+    <nav>
+        <a href="activities.html">Professional Development Activities</a>
+        <a href="homework.html">Assignments</a>
+        <a href="reflections.html">Weekly Reflections</a>
+    </nav>
     <body>
         <p>Welcome to my professional development portfolio. This is a living document to record my progress throughout bootcamp. I am very excited to be part of Deep Dive Full Stack Cohort 20!</p>
-        <p>You can check out my weekly professional development <a href="activities.html">activities</a>. I will also post a weekly <a href="reflections.html">reflection</a> and keep a running list of my <a href="homework.html">homework</a> projects assigned throughout bootcamp.</p>
     </body>
 </html>
