removed nav bar, changed title and added date and link to career buddy page

--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>My Pro-Dev page</title>
+        <title>Yvette's Pro Dev</title>
     </head>
-    <nav>
-        <a href="activities.html">Professional Development Activities</a>
-        <a href="homework.html">Assignments</a>
-        <a href="reflections.html">Weekly Reflections</a>
-    </nav>
     <body>
+    <h1>Yvette Johnson-Rodgers</h1>
+        <p>Last Updated: 4/22/2018</p>
+    <p>Career Buddy: <a href="https://bootcamp-coders.cnm.edu/~cmarquez69/career-portfolio/index.html">Carlos Marquez</a></p>
         <p>Welcome to my professional development portfolio. This is a living document to record my progress throughout bootcamp. I am very excited to be part of Deep Dive Full Stack Cohort 20!</p>
     </body>
 </html>
