added week 2 reflection v1

--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
     <body>
     <h1>Yvette Johnson-Rodgers</h1>
         <p>Last Updated: 4/22/2018</p>
-    <p>Career Buddy: <a href="https://bootcamp-coders.cnm.edu/~cmarquez69/career-portfolio/index.html">Carlos Marquez</a></p>
-        <p>Welcome to my professional development portfolio. This is a living document to record my progress throughout bootcamp. I am very excited to be part of Deep Dive Full Stack Cohort 20!</p>
+        <p>Career Buddy: <a href="https://bootcamp-coders.cnm.edu/~cmarquez69/career-portfolio/index.html" target="_blank">Carlos Marquez</a></p>
+    <h2>Quantitative accomplishments</h2>
+        <ul>
+            <li>Led a team of 15 people</li>
+            <li>Led a team of 15 people</li>
+            <li>Coached 50 (?) people in new to role tech support position</li>
+            <li>Developed and delivered low level tech training to 10 groups</li>
+        </ul>
+    <h2>Qualitative features</h2>
+        <ul>
+            <li>Tenacity/persistence</li>
+            <li>Empathy</li>
+            <li>Linking concepts</li>
+        </ul>
+    <h2>Week 2 Reflection</h2>
+    <p>In week one, Dan shared an article called <a href="https://www.thinkful.com/blog/why-learning-to-code-is-so-damn-hard/" target="_blank">Why Programming is Damn Hard.</a> I spent most of week two at the Cliff of Confusion. Understanding was either just in out just out of reach, and at the end of the day, I wasn't always sure I grabbed the right fruit. I realized that I needed to sharpen some of my personal tools to learn better. First, I needed to ask better questions to get the information that I needed. One example is “what’s the use case for x?” to understand when to use a specific function, method, etc. The other question I learned to re-phrase is “where in the documentation can I find that?” or “what documentation should I check?” I have also found it very useful to review my peers’ coding to see how they solved a problem, rather than asking them, because we are all still getting the hang of this and communicate about it differently.</p>
+    <p>The second tool in my pocket has been learning what documentation is. I was becoming frustrated when people kept repeating “just read the documentation,” when it literally dawned on me like the sun rising with angels singing - “There’s actually a <a href="http://php.net/manual/en/index.php" target="_blank">manual for PHP?</a>” I thought documentation was just a general term for “go Google it, duh.” I am not sure what led me to think that, but I am really glad I learned that there is official documentation and I know exactly where to look for information now.</p>
+    <p>Relating to documentation, I am making friends with some different resources for learning. I found some Lynda.com videos that are helping me with PHP object oriented programming, which has probably tied with database building for the hardest topics so far. I have also been getting better at using Stack Exchange for help, and I created an account there. There is also some unhelpful information out there - I exclude any search results from <a href="https://www.w3schools.com/" target="_blank">W3 Schools</a> unless it pertains to HTML5 or CSS3.</p>
+    <p>More than anything, I have been learning to parse concepts and huge chunks of code. I tend to be a very methodical person, but it has been a challenge to work with so many lines of code. It is easy to get lost. In this, mapping it out on paper has helped keep my focused on the goal of the code. I can check off the parts that I have completed.</p>
+    <p>I am a perfectionist, which comes with positive effects that I make work for me, and a couple not so good effects. One of the negatives is that I dislike needing help because it demonstrates a knowledge gap. But in the development world, while knowledge is deeply respected, a zeal and ability for learning is even more important. How can you learn without recognizing what you do not know? This reminds me of one of my all-time favorite quotes by the philosopher Epictetus:
+        <blockquote><p>"It is <strong>impossible</strong> for a man to learn what he thinks he already knows."</p></blockquote>
+    <p>When I signed up and paid for this bootcamp, I knew this area would be a challenge for me, so I had a plan to address it. I would ask questions, collaborate with peers, and keep a growth mindset about my learning. So far, it has been working.</p>
+    <p>I am not (outwardly) shy about asking questions in class. I do a lot of Google-fu to get the information I want, but some questions help facilitate learning for others, too. There were some things this past week that I would not have understood without seeing  an example or hearing it explained in a different way. Dylan has commented twice to me that he likes my questions for making class more engaging, and to keep it up. As a little bit of imposter syndrome crept in, looking around and seeing my peers at what feels like light years ahead of me, I remember that we are all learning, different ways and at different speeds, and even from different starting points. So many sites like StackExchange exist just for developers to ask question and help one another.</p>
+    <p>I am learning to turn to my peers more often after struggling on my own for a little while. I love how we have been sharing information and help through Slack. It makes me feel like we are a team. In a world of open sourcing, I believe that like the idea of Karma, what we put into the world, we will get back.</p>
     </body>
 </html>
