--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <h2>Quantitative accomplishments</h2>
         <ul>
             <li>Led a team of 15 people</li>
-            <li>Led a team of 15 people</li>
             <li>Coached 50 (?) people in new to role tech support position</li>
             <li>Developed and delivered low level tech training to 10 groups</li>
         </ul>
@@ -21,6 +20,8 @@
             <li>Empathy</li>
             <li>Linking concepts</li>
         </ul>
+    <h2>Week 1 Reflection</h2>
+    <p>Week one flew by! Bootcamp on one hand has been pretty easy because we have had a lot of lectures. On the other hand, being able to apply the information on the homework assignment for this weekend was challenging. We had to design a database, which probably took me about 6 hours to complete, with a lot of "marinating" my thoughts in between. Ultimately, I keep seeing how much I have to learn. I am still learning how to elucidate the questions that I have and use the documentation.</p>
     <h2>Week 2 Reflection</h2>
     <p>In week one, Dan shared an article called <a href="https://www.thinkful.com/blog/why-learning-to-code-is-so-damn-hard/" target="_blank">Why Programming is Damn Hard.</a> I spent most of week two at the Cliff of Confusion. Understanding was either just in out just out of reach, and at the end of the day, I wasn't always sure I grabbed the right fruit. I realized that I needed to sharpen some of my personal tools to learn better. First, I needed to ask better questions to get the information that I needed. One example is “what’s the use case for x?” to understand when to use a specific function, method, etc. The other question I learned to re-phrase is “where in the documentation can I find that?” or “what documentation should I check?” I have also found it very useful to review my peers’ coding to see how they solved a problem, rather than asking them, because we are all still getting the hang of this and communicate about it differently.</p>
     <p>The second tool in my pocket has been learning what documentation is. I was becoming frustrated when people kept repeating “just read the documentation,” when it literally dawned on me like the sun rising with angels singing - “There’s actually a <a href="http://php.net/manual/en/index.php" target="_blank">manual for PHP?</a>” I thought documentation was just a general term for “go Google it, duh.” I am not sure what led me to think that, but I am really glad I learned that there is official documentation and I know exactly where to look for information now.</p>
