added Nav bar at top of page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <meta charset="utf-8">
         <title>Yvette's Pro Dev</title>
     </head>
+    <nav>
+        <a href="https://twitter.com/itsyvejr" target="_blank">Twitter</a>
+        <a href="https://github.com/yvejr" target="_blank">GitHub</a>
+        <a href="http://www.yvette.io/" target="_blank">Personal Page</a>
+    </nav>
     <body>
     <h1>Yvette Johnson-Rodgers</h1>
         <p>Last Updated: 4/22/2018</p>
