updated golden circle

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a href="https://twitter.com/itsyvejr" target="_blank">Twitter</a>
         <a href="https://github.com/yvejr" target="_blank">GitHub</a>
         <a href="http://www.yvette.io/" target="_blank">Personal Page</a>
+        <a href="https://www.linkedin.com/in/yvette-johnson-rodgers/" target="_blank">LinkedIn</a>
     </nav>
     <h2>Quantitative accomplishments</h2>
         <ul>
@@ -25,7 +26,8 @@
             <li>Empathy</li>
             <li>Linking concepts</li>
         </ul>
-    <h2>April 10th, 2018</h2>
+    <h2>The Golden Circle</h2>
+    <p>Our first activity in pro dev was to begin thinking about our why, after watching a TED talk by <a href="https://www.ted.com/talks/simon_sinek_how_great_leaders_inspire_action" target="_blank">Simon Sinek</a>. The idea is that your WHY should guide what you do. And if you are following your WHY, and sharing that with developers and potential employers, they will remember you because of your passion and your purpose. This is still a work in progress for me and I will be updating it with a new version.</p>
         <img src="goldencirclev1.svg" alt="Diagram of why, how, what">
         <p>Name + What + Why + How + Question (invitation) = Elevator Pitch</p>
         <p>Hi, my name is Yvette. I connect individuals to resources and services to that improve our community. I am doing this in partnership with non-profits and the City of Albuquerque using front-end and back-end languages. Do you do any work with the community?</p>
