Added google search content

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
         <title>Yvette's Pro Dev</title>
     </head>
     <body>
@@ -10,8 +11,7 @@
         <p>Career Buddy: <a href="https://bootcamp-coders.cnm.edu/~cmarquez69/career-portfolio/index.html" target="_blank">Carlos Marquez</a></p>
     <nav>
         <a href="https://twitter.com/itsyvejr" target="_blank">Twitter</a>
-        <a href="https://github.com/yvejr" target="_blank">GitHub</a>
-        <a href="http://www.yvette.io/" target="_blank">Personal Page</a>
+        <a href="http://www.yvette.io/" target="_blank">Personal Page - Coming Soon</a>
         <a href="https://www.linkedin.com/in/yvette-johnson-rodgers/" target="_blank">LinkedIn</a>
     </nav>
     <h2>Quantitative accomplishments</h2>
@@ -31,17 +31,50 @@
         <img src="goldencirclev1.svg" alt="Diagram of why, how, what">
         <p>Name + What + Why + How + Question (invitation) = Elevator Pitch</p>
         <p>Hi, my name is Yvette. I connect individuals to resources and services to that improve our community. I am doing this in partnership with non-profits and the City of Albuquerque using front-end and back-end languages. Do you do any work with the community?</p>
+    <h2>Online Presence</h2>
+        <p>The second thing we talked about in pro dev was our online presence. Particularly as web developers, how we represent ourselves online is part of our initial impression. If we have a very poorly designed page, or employers or clients can easily google us to find photos of us doing keg stands, odds are we won't be projecting the image we want. In crafting an online presence, I have set up a new Gmail address to use solely for professional account and purposes. I have created a Stack Exchage account with this email address, purchased my personal web page with it, and set up a new twitter account with it. I will also be changing my Github and other associated accounts to reflect the new email.</p>
+        <p>Although one might think business cards are out of style, they are more important than ever. I have begun designing my card which will have a link to point people to my personal page so that I can more dynamically showcase myself there.</p>
+        <p>We spent some time Googling ourselves to see what came up. Google displays less about me than I expected, for which I am glad. I try to be pretty private online, and that is why I have decided to delete my Facebook in one week. I do need to work on my professional identity online. My Twitter is brand new and did not come up.</p>
+        <table>
+            <thead>
+                <tr>
+                    <th colspan="3">Google Search Results</th>
+                </tr>
+            </thead>
+        <tbody>
+                <tr>
+                    <td></td>
+                    <td>Personal</td>
+                    <td>Professional</td>
+                </tr>
+                <tr>
+                    <td>Identity</td>
+                    <td>Yvejr</td>
+                    <td>Legal name</td>
+                </tr>
+                <tr>
+                    <td>Channel</td>
+                    <td>LinkedIn, GitHub</td>
+                    <td>Facebook,Google+</td>
+                </tr>
+                <tr>
+                    <td>Content</td>
+                    <td>Adult tutor, tech support, some leadership,transitioning into development</td>
+                    <td>Photography, likes quotes</td>
+                </tr>
+        </tbody>
+    </table>
     <h2>Week 1 Reflection</h2>
         <p>Week one flew by! Bootcamp on one hand has been pretty easy because we have had a lot of lectures. On the other hand, being able to apply the information on the homework assignment for this weekend was challenging. We had to design a database, which probably took me about 6 hours to complete, with a lot of "marinating" my thoughts in between. Ultimately, I keep seeing how much I have to learn. I am still learning how to elucidate the questions that I have and use the documentation.</p>
     <h2>Week 2 Reflection</h2>
         <p>In week one, Dan shared an article called <a href="https://www.thinkful.com/blog/why-learning-to-code-is-so-damn-hard/" target="_blank">Why Programming is Damn Hard.</a> I spent most of week two at the Cliff of Confusion. Understanding was either just in out just out of reach, and at the end of the day, I wasn't always sure I grabbed the right fruit. I realized that I needed to sharpen some of my personal tools to learn better. First, I needed to ask better questions to get the information that I needed. One example is “what’s the use case for x?” to understand when to use a specific function, method, etc. The other question I learned to re-phrase is “where in the documentation can I find that?” or “what documentation should I check?” I have also found it very useful to review my peers’ coding to see how they solved a problem, rather than asking them, because we are all still getting the hang of this and communicate about it differently.</p>
     <p>The second tool in my pocket has been learning what documentation is. I was becoming frustrated when people kept repeating “just read the documentation,” when it literally dawned on me like the sun rising with angels singing - “There’s actually a <a href="http://php.net/manual/en/index.php" target="_blank">manual for PHP?</a>” I thought documentation was just a general term for “go Google it, duh.” I am not sure what led me to think that, but I am really glad I learned that there is official documentation and I know exactly where to look for information now.</p>
-    <p>Relating to documentation, I am making friends with some different resources for learning. I found some Lynda.com videos that are helping me with PHP object oriented programming, which has probably tied with database building for the hardest topics so far. I have also been getting better at using Stack Exchange for help, and I created an account there. There is also some unhelpful information out there - I exclude any search results from <a href="https://www.w3schools.com/" target="_blank">W3 Schools</a> unless it pertains to HTML5 or CSS3.</p>
+    <p>Relating to documentation, I am making friends with some different resources for learning. I found some Lynda.com videos that are helping me with PHP object oriented programming, which has probably tied with database building for the hardest topics so far. I have also been getting better at using Stack Overflow for help, and I created an account there. There is also some unhelpful information out there - I exclude any search results from <a href="https://www.w3schools.com/" target="_blank">W3 Schools</a> unless it pertains to HTML5 or CSS3.</p>
     <p>More than anything, I have been learning to parse concepts and huge chunks of code. I tend to be a very methodical person, but it has been a challenge to work with so many lines of code. It is easy to get lost. In this, mapping it out on paper has helped keep my focused on the goal of the code. I can check off the parts that I have completed.</p>
     <p>I am a perfectionist, which comes with positive effects that I make work for me, and a couple not so good effects. One of the negatives is that I dislike needing help because it demonstrates a knowledge gap. But in the development world, while knowledge is deeply respected, a zeal and ability for learning is even more important. How can you learn without recognizing what you do not know? This reminds me of one of my all-time favorite quotes by the philosopher Epictetus:
-        <blockquote><p>"It is <strong>impossible</strong> for a man to learn what he thinks he already knows."</p></blockquote>
+        <blockquote>"It is <strong>impossible</strong> for a man to learn what he thinks he already knows." </blockquote>
     <p>When I signed up and paid for this bootcamp, I knew this area would be a challenge for me, so I had a plan to address it. I would ask questions, collaborate with peers, and keep a growth mindset about my learning. So far, it has been working.</p>
-    <p>I am not (outwardly) shy about asking questions in class. I do a lot of Google-fu to get the information I want, but some questions help facilitate learning for others, too. There were some things this past week that I would not have understood without seeing  an example or hearing it explained in a different way. Dylan has commented twice to me that he likes my questions for making class more engaging, and to keep it up. As a little bit of imposter syndrome crept in, looking around and seeing my peers at what feels like light years ahead of me, I remember that we are all learning, different ways and at different speeds, and even from different starting points. So many sites like StackExchange exist just for developers to ask question and help one another.</p>
+    <p>I am not (outwardly) shy about asking questions in class. I do a lot of Google-fu to get the information I want, but some questions help facilitate learning for others, too. There were some things this past week that I would not have understood without seeing  an example or hearing it explained in a different way. Dylan has commented twice to me that he likes my questions for making class more engaging, and to keep it up. As a little bit of imposter syndrome crept in, looking around and seeing my peers at what feels like light years ahead of me, I remember that we are all learning, different ways and at different speeds, and even from different starting points. So many sites like StackOverflow exist just for developers to ask question and help one another.</p>
     <p>I am learning to turn to my peers more often after struggling on my own for a little while. I love how we have been sharing information and help through Slack. It makes me feel like we are a team. In a world of open sourcing, I believe that like the idea of Karma, what we put into the world, we will get back.</p>
     </body>
 </html>
