added Visuals Speak content

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                 </tr>
         </tbody>
     </table>
+    <h2>Visuals Speak!</h2>
+        <p>Here is a snapshot of how I feel right now about my new career and how I imagine my future in a couple years. On the left, which is me now, I feel like a child who is enthusiastic about learning. I also feel like a child who has so much to learn compared to an adult. On the right is the image of a hot air ballon. Hot air ballooning is our thing here in New Mexico! I love home, and I imagine my future taking off like this, on an adventure somewhere, where I don't know exactly where I will land. You just go with the wind a little bit, the way I want my interests to develop organically.</p>
+        <img src="visuals.jpg" alt="blah" class="contain"/>
     <h2>Week 1 Reflection</h2>
         <p>Week one flew by! Bootcamp on one hand has been pretty easy because we have had a lot of lectures. On the other hand, being able to apply the information on the homework assignment for this weekend was challenging. We had to design a database, which probably took me about 6 hours to complete, with a lot of "marinating" my thoughts in between. Ultimately, I keep seeing how much I have to learn. I am still learning how to elucidate the questions that I have and use the documentation.</p>
     <h2>Week 2 Reflection</h2>
