--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     </head>
     <body>
     <h1>Yvette Johnson-Rodgers</h1>
-        <p>Last Updated: 4/22/2018</p>
+        <p>Last Updated: 4/23/2018</p>
         <p>Career Buddy: <a href="https://bootcamp-coders.cnm.edu/~cmarquez69/career-portfolio/index.html" target="_blank">Carlos Marquez</a></p>
     <nav>
         <a href="https://twitter.com/itsyvejr" target="_blank">Twitter</a>
         <a href="http://www.yvette.io/" target="_blank">Personal Page - Coming Soon</a>
         <a href="https://www.linkedin.com/in/yvette-johnson-rodgers/" target="_blank">LinkedIn</a>
+        <a href="documents/YvetteJohnsonRodgersResume.pdf" target="_blank">Resume</a>
     </nav>
     <h2>Quantitative accomplishments</h2>
         <ul>
