readded current resume v1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="https://twitter.com/itsyvejr" target="_blank">Twitter</a>
         <a href="http://www.yvette.io/" target="_blank">Personal Page - Coming Soon</a>
         <a href="https://www.linkedin.com/in/yvette-johnson-rodgers/" target="_blank">LinkedIn</a>
-        <a href="yvetteresumev1.pdf" target="_blank">Resume</a>
+        <a href="yvetteresumeversionone.pdf" target="_blank">Resume</a>
     </nav>
     <h2>Quantitative accomplishments</h2>
         <ul>
