successfully added current resume v1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="https://twitter.com/itsyvejr" target="_blank">Twitter</a>
         <a href="http://www.yvette.io/" target="_blank">Personal Page - Coming Soon</a>
         <a href="https://www.linkedin.com/in/yvette-johnson-rodgers/" target="_blank">LinkedIn</a>
-        <a href="yvetteresumeversionone.pdf" target="_blank">Resume</a>
+        <a href="documents/yvetteresumeversionone.pdf" target="_blank">Resume</a>
     </nav>
     <h2>Quantitative accomplishments</h2>
         <ul>
@@ -33,7 +33,7 @@
         <p>Name + What + Why + How + Question (invitation) = Elevator Pitch</p>
         <p>Hi, my name is Yvette. I connect individuals to resources and services to that improve our community. I am doing this in partnership with non-profits and the City of Albuquerque using front-end and back-end languages. Do you do any work with the community?</p>
     <h2>Online Presence</h2>
-        <p>The second thing we talked about in pro dev was our online presence. Particularly as web developers, how we represent ourselves online is part of our initial impression. If we have a very poorly designed page, or employers or clients can easily google us to find photos of us doing keg stands, odds are we won't be projecting the image we want. In crafting an online presence, I have set up a new Gmail address to use solely for professional account and purposes. I have created a Stack Exchage account with this email address, purchased my personal web page with it, and set up a new twitter account with it. I will also be changing my Github and other associated accounts to reflect the new email.</p>
+        <p>The second thing we talked about in pro dev was our online presence. Particularly as web developers, how we represent ourselves online is part of our initial impression. If we have a very poorly designed page, or employers or clients can easily google us to find photos of us doing keg stands, odds are we won't be projecting the image we want. In crafting an online presence, I have set up a new Gmail address to use solely for professional account and purposes. I have created a Stack Exchange account with this email address, purchased my personal web page with it, and set up a new twitter account with it. I will also be changing my Github and other associated accounts to reflect the new email.</p>
         <p>Although one might think business cards are out of style, they are more important than ever. I have begun designing my card which will have a link to point people to my personal page so that I can more dynamically showcase myself there.</p>
         <p>We spent some time Googling ourselves to see what came up. Google displays less about me than I expected, for which I am glad. I try to be pretty private online, and that is why I have decided to delete my Facebook in one week. I do need to work on my professional identity online. My Twitter is brand new and did not come up.</p>
         <table>
