--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <a href="https://twitter.com/itsyvejr" target="_blank">Twitter</a>
         <a href="http://www.yvette.io/" target="_blank">Personal Page - Coming Soon</a>
         <a href="https://www.linkedin.com/in/yvette-johnson-rodgers/" target="_blank">LinkedIn</a>
-        <a href="" target="_blank">Resume v1</a>
-        <a href="" target="_blank">Resume v2</a>
+        <a href="assets/yvette-resumev1.pdf" target="_blank">Resume v1</a>
+        <a href="assets/yvette-resumev2.pdf" target="_blank">Resume v2</a>
     </nav>
     <h2>Quantitative accomplishments</h2>
         <ul>
