added career dev 'stovetop'

--- a/index.html
+++ b/index.html
@@ -75,6 +75,32 @@
     having the tools or foundation to do so is important, but that is a different topic.</p>
     <p>There really aren't any obstacles right now that I can't overcome. The biggest thing is finding time to do all the things I want to do to get where I want to be. I quit my job of ten years and put everything else on hold so that I can focus on getting a solid start in this career. I believe I've got this!</p>
     <p>I am always learning and there are a lot of gaps in my knowledge right now, but I know my value. I am enthusiastic, curious, an encourager, a good team member, and I do good work.</p>
+    <h2>My Stove Top - What’s Cookin’: My Career Initiatives</h2>
+    <h3>Left front burner:  establish my personal brand</h3>
+        <ul>
+            <li>Start a Twitter account and start tweeting regularly</li>
+            <li>Update LinkedIn and be more active; request some recommendations, and start edorsing others</li>
+            <li>Personal website & email setup</li>
+        </ul>
+    <h3>Right front burner: succeed in boot camp</h3>
+        <ul>
+            <li>Read the documentation? Always...</li>
+            <li>Get assignments done on time!</li>
+            <li>Spend time studying and 'tinkering'</li>
+            <li>Think of something to do for my capstone team</li>
+        </ul>
+    <h3>Left back burner number one: network in the local tech community</h3>
+        <ul>
+            <li>Attend & join more Meetups</li>
+            <li>Continue going to Crepes & coding on Saturdays</li>
+            <li>Use Twitter to connect with new people I meet, and get introductions to new people from those I know</li>
+        </ul>
+    <h3>Right back burner number two:  find my first job as a developer</h3>
+        <ul>
+            <li>Research local employers</li>
+            <li>Attend open houses & job events</li>
+            <li>Work on resume, practice interview skills, and prep for interview questions</li>
+        </ul>
     <h2>Week 1 Reflection</h2>
         <p>Week one flew by! Bootcamp on one hand has been pretty easy because we have had a lot of lectures. On the other hand, being able to apply the information on the homework assignment for this weekend was challenging. We had to design a database, which probably took me about 6 hours to complete, with a lot of "marinating" my thoughts in between. Ultimately, I keep seeing how much I have to learn. I am still learning how to elucidate the questions that I have and use the documentation.</p>
     <h2>Week 2 Reflection</h2>
