added career dev 'stovetop'

--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
             <li>Spend time studying and 'tinkering'</li>
             <li>Think of something to do for my capstone team</li>
         </ul>
-    <h3>Left back burner number one: network in the local tech community</h3>
+    <h3>Left back burner: network in the local tech community</h3>
         <ul>
             <li>Attend & join more Meetups</li>
             <li>Continue going to Crepes & coding on Saturdays</li>
             <li>Use Twitter to connect with new people I meet, and get introductions to new people from those I know</li>
         </ul>
-    <h3>Right back burner number two:  find my first job as a developer</h3>
+    <h3>Right back burner:  find my first job as a developer</h3>
         <ul>
             <li>Research local employers</li>
             <li>Attend open houses & job events</li>
