updated the date on page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
     <h1>Yvette Johnson-Rodgers</h1>
-        <p>Last Updated: 4/25/2018</p>
+        <p>Last Updated: 4/30/2018</p>
         <p>Career Buddy: <a href="https://bootcamp-coders.cnm.edu/~cmarquez69/career-portfolio/index.html" target="_blank">Carlos Marquez</a></p>
     <nav>
         <a href="https://twitter.com/itsyvejr" target="_blank">Twitter</a>
@@ -71,9 +71,9 @@
         <img src="visuals.jpg" alt="blah" class="contain"/>
     <h2>You've Got Potential!</h2>
     <p>I thought pretty hard about this assignement. Sure, I have been told I have potential- to be a good photographer, a tour guide, a chef, a teacher, a trainer, a leader, a public speaker...A lot of times I believed these things, and sometimes it seemed way too out of my league. Once, when I explained why I wanted to code for a living, my husband responded emphatically, "That's perfect for you!" I am very analytical and detail oriented, and I like logic.</p>
-    <p>I think the difference between pursuing your goals and not are two things: 1) believing  you can do it and 2) wanting to do it. Of course,
+    <p>I think the difference between pursuing your goals and not pursuing are two things: 1) believing  you can do it and 2) wanting to do it. Of course,
     having the tools or foundation to do so is important, but that is a different topic.</p>
-    <p>There really aren't any obstacles right now that I can't overcome. The biggest thing is finding time to do all the things I want to do to get where I want to be. I quit my job of ten years and put everything else on hold so that I can focus on getting a solid start in this career. I believe I've got this!</p>
+    <p>There really aren't any obstacles right now that I can't overcome. The biggest thing is finding time to do all the things I want to do to get where I want to be. I quit my job of ten years and put everything else on hold so that I can focus on getting a solid start in this career. I believe I've got this! What I can do is be more strategic with my time. If I am stuck on something, I need to give it a rest and work on something else. Also, getting more sleep is important - but as I type this, it's already late!</p>
     <p>I am always learning and there are a lot of gaps in my knowledge right now, but I know my value. I am enthusiastic, curious, an encourager, a good team member, and I do good work.</p>
     <h2>My Stove Top - What’s Cookin’: My Career Initiatives</h2>
     <h3>Left front burner:  establish my personal brand</h3>
