corrected some spelling and punctuation

--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
         <p>Here is a snapshot of how I feel right now about my new career and how I imagine my future in a couple years. On the left, which is me now, I feel like a child who is enthusiastic about learning. I also feel like a child who has so much to learn compared to an adult. On the right is the image of a hot air ballon. Hot air ballooning is our thing here in New Mexico! I love home, and I imagine my future taking off like this, on an adventure somewhere, where I don't know exactly where I will land. You just go with the wind a little bit, the way I want my interests to develop organically.</p>
         <img src="visuals.jpg" alt="blah" class="contain"/>
     <h2>You've Got Potential!</h2>
-    <p>I thought pretty hard about this assignement. Sure, I have been told I have potential- to be a good photographer, a tour guide, a chef, a teacher, a trainer, a leader, a public speaker...A lot of times I believed these things, and sometimes it seemed way too out of my league. Once, when I explained why I wanted to code for a living, my husband responded emphatically, "That's perfect for you!" I am very analytical and detail oriented, and I like logic.</p>
+    <p>I thought pretty hard about this assignment. Sure, I have been told I have potential- to be a good photographer, a tour guide, a chef, a teacher, a trainer, a leader, a public speaker...A lot of times I believed these things, and sometimes it seemed way too out of my league. Once, when I explained why I wanted to code for a living, my husband responded emphatically, "That's perfect for you!" I am very analytical and detail oriented, and I like logic.</p>
     <p>I think the difference between pursuing your goals and not pursuing are two things: 1) believing  you can do it and 2) wanting to do it. Of course,
     having the tools or foundation to do so is important, but that is a different topic.</p>
     <p>There really aren't any obstacles right now that I can't overcome. The biggest thing is finding time to do all the things I want to do to get where I want to be. I quit my job of ten years and put everything else on hold so that I can focus on getting a solid start in this career. I believe I've got this! What I can do is be more strategic with my time. If I am stuck on something, I need to give it a rest and work on something else. Also, getting more sleep is important - but as I type this, it's already late!</p>
     <p>I am always learning and there are a lot of gaps in my knowledge right now, but I know my value. I am enthusiastic, curious, an encourager, a good team member, and I do good work.</p>
-    <h2>My Stove Top - What’s Cookin’: My Career Initiatives</h2>
+    <h2>My Stove Top - What’s Cookin’? My Career Initiatives</h2>
     <h3>Left front burner:  establish my personal brand</h3>
         <ul>
             <li>Start a Twitter account and start tweeting regularly</li>
