--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
     <h1>Yvette Johnson-Rodgers</h1>
-        <p>Last Updated: 4/30/2018</p>
-        <p>Career Buddy: <a href="https://bootcamp-coders.cnm.edu/~cmarquez69/career-portfolio/index.html" target="_blank">Carlos Marquez</a></p>
+        <p>Last Updated: 5/1/2018</p>
+        <p>Career Buddies: <a href="https://bootcamp-coders.cnm.edu/~cmarquez69/career-portfolio/index.html" target="_blank">Carlos Marquez</a> and <a href="https://bootcamp-coders.cnm.edu/~jhawkins20/career-portfolio/index.html" target="_blank">Jullyane Hawkins</a></p>
     <nav>
         <a href="https://twitter.com/itsyvejr" target="_blank">Twitter</a>
         <a href="http://www.yvette.io/" target="_blank">Personal Page - Coming Soon</a>
