--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <a href="https://www.linkedin.com/in/yvette-johnson-rodgers/" target="_blank">LinkedIn</a>
         <a href="assets/yvette-resumev1.pdf" target="_blank">Resume v1</a>
         <a href="assets/yvette-resumev2.pdf" target="_blank">Resume v2</a>
+        <a href="assets/Yvette-Johnson-Rodgers-Resume.pdf">Resume v3</a>
+
     </nav>
     <h2>Quantitative accomplishments</h2>
         <ul>
