--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
     <h1>Yvette Johnson-Rodgers</h1>
-        <p>Last Updated: 5/1/2018</p>
+        <p>Last Updated: 5/6/2018</p>
         <p>Career Buddies: <a href="https://bootcamp-coders.cnm.edu/~cmarquez69/career-portfolio/index.html" target="_blank">Carlos Marquez</a> and <a href="https://bootcamp-coders.cnm.edu/~jhawkins20/career-portfolio/index.html" target="_blank">Jullyane Hawkins</a></p>
     <nav>
         <a href="https://twitter.com/itsyvejr" target="_blank">Twitter</a>
@@ -15,7 +15,7 @@
         <a href="https://www.linkedin.com/in/yvette-johnson-rodgers/" target="_blank">LinkedIn</a>
         <a href="assets/yvette-resumev1.pdf" target="_blank">Resume v1</a>
         <a href="assets/yvette-resumev2.pdf" target="_blank">Resume v2</a>
-        <a href="assets/Yvette-Johnson-Rodgers-Resume.pdf">Resume v3</a>
+        <a href="assets/Yvette-Johnson-Rodgers-Resume.pdf" target="blank">Resume v3</a>
 
     </nav>
     <h2>Quantitative accomplishments</h2>
@@ -123,5 +123,10 @@
     <p>My favorite guest speaker was Rana, a developer from the Gaza strip in Palestine. She really inspired me with the idea of a global development community. Just thinking about what life could be like with your head stuck in your laptop, never looking around or networking, is a limiting way to evolve as a developer.</p>
     <p>We also heard from John, the founder of Deep Dive Coding, and Dean, the president of NM Tech Council. The main take away was that the industry of tech in NM is small but growing, and there are some very invested groups working on bringing more work and skill to the area. John additionally had a TON of tips on branding and other pro-dev stuff.</p>
     <p>Speaking of pro-dev, I have been working on ordering business cards, but I am stuck. Just knowing what I want as a developer is a challenge, so building my brand is on the backburner more than I would like it to be. The golden circle activity has been on my mind as well. It's noteworthy that it takes concentrated effort to make yourself known and figure out who you are. Just being yourself is not enough! You have to put yourself out there in a strategic way at the outset. Hopefully, week four will bring some clarity to all of this and where I am going, and branding will follow suite.</p>
+    <h2>Week 4 Reflection</h2>
+    <p>This past week was the roughest yet. I am imagining it will only get harder. I spend several hours a day and at least half the weekend studying, and yet still don’t seem proficient at my new skills! We had a guest speaker come and talk to us about imposter syndrome. I’m really glad that it was this week, because I’ve been asking myself if I can do this. I know that I can, but some days it feels like chipping away at an iceberg with a screwdriver. I’m making progress. But I have to remember to take breaks, to be easy on myself because what we are learning is a lot in one short span of time; and to keep in mind that programming will always involve learning. After all, that’s why I got into this field. I love learning and I love being challenged. Anything less is boring to me.</p>
+    <p>I am keeping a running list of what interests me most in development. This week, I realized into words (it's been floating around in my mind for some time) that I am interested in the design of web sites. Not so much aesthetically, but functionally. I have always been fascinated with people, how they think, and how they communicate. I think marketing is interesting, but isn't something I could feel good about doing. But to design a product or site for people, that is interesting. What do they want out of it? How will they use it? How will it make them feel? I love starting from scratch and going up from the ground. I downloaded an Audible book called The Design of Everyday Things to listen to this week. I am also going to read a little more on the psychology of ui/ux design and see where this interest takes me. I am also interested in learning more about machine learning and randomness. This might have to wait a while to explore though.</p>
+    <p>So with the close of ONE MONTH OF BOOTCAMP - it's time to look forward towards the second month and all the fun stuff we will be building with capstone.</p>
+    <img src="brainy-girl2.jpg" alt="magnetic poetry on fridge reads 'this brainy girl can code'">
     </body>
 </html>
