added opportunity letter to links

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="assets/yvette-resumev1.pdf" target="_blank">Resume v1</a>
         <a href="assets/yvette-resumev2.pdf" target="_blank">Resume v2</a>
         <a href="assets/Yvette-Johnson-Rodgers-Resume.pdf" target="blank">Resume v3</a>
+        <a href="assets/YvetteDescartesLabLetter.pdf" target="_blank">Opportunity Letter</a>
 
     </nav>
     <h2>Quantitative accomplishments</h2>
